<resources>
    <string name="app_name">Week1</string>

    <!--로그인뷰-->
    <string name="tv_signin_maintitle">SOPTHub</string>
    <string name="tv_signin_login">로그인</string>
    <string name="tv_signin_id">아이디</string>
    <string name="tv_signin_pw">비밀번호</string>
    <string name="et_signin_id">아이디를 입력해주세요</string>
    <string name="et_signin_pw">비밀번호를 입력해주세요</string>
    <string name="btn_signin_login">로그인</string>
    <string name="btn_signin_signup">회원가입</string>

    <!--회원가입뷰-->
    <string name="tv_signup_maintitle">SOPTHub</string>
    <string name="tv_signup_signup">회원가입</string>
    <string name="tv_signup_name">이름</string>
    <string name="et_signup_name">이름을 입력해주세요</string>
    <string name="tv_signup_id">아이디</string>
    <string name="et_signup_id">아이디를 입력해주세요</string>
    <string name="tv_signup_pw">비밀번호</string>
    <string name="et_signup_pw">비밀번호를 입력해주세요</string>
    <string name="btn_signup_done">회원가입 완료</string>

    <!--홈 뷰-->
    <string name="tv_home_maintitle">SOPTHub</string>
    <string name="tv_home_name">이름</string>
    <string name="tv_home_username">김세훈</string>
    <string name="tv_home_age">나이</string>
    <string name="tv_home_userage">25</string>
    <string name="tv_home_mbti">MBTI</string>
    <string name="tv_home_usermbti">ENFJ</string>
    <string name="tv_home_introduce">소개</string>
    <string name="tv_home_userintroduce">하잉</string>
    <string name="btn_home_followerlist">팔로워\n목록</string>
    <string name="btn_home_repositorylist">레포지토리\n목록</string>

    <!--홈 뷰-->
    <string name="tv_detail_maintitle">SOPTHub</string>
    <string name="tv_detail_name">이름 : </string>
    <string name="tv_detail_detailintro">상세 소개</string>



</resources>